Minecraft 1.20.2 backport